src/test/deca/context/invalid/created/decl_float_eq_int.deca
{
float a = 1; //1 n'est pas un float

}